jupyterhub/templates/httpd-proxy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/secure-backends: "true"
    kubernetes.io/tls-acme: "true"
  creationTimestamp: null
  labels:
    app: ingress-httpd-proxy
  name:
    ingress-httpd-proxy
spec:
  rules:
    - host: k8s1.syzygy.ca
      http:
        paths:
          - backend:
              serviceName: httpd-proxy-public
              servicePort: 80
            path: /
status:
  loadBalancer: {}
